--- a/popin/popin.css
+++ b/popin/popin.css
@@ -1,3 +1,12 @@
+#blur {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(10px);
+    z-index:999998 ;
+}
 
 body {
     background: #bf34d8;
@@ -5,8 +14,10 @@ body {
 }
 
 #customPopup {
-    position: absolute;
-    display: grid;
+    position: fixed;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
     flex-direction: column;
     top: 50%;
     left: 50%;
@@ -20,7 +31,7 @@ body {
     width: 400px;
     height: 280px;
     box-shadow: 0 0 15px #d1f3fa;
-    z-index: 1000;
+    z-index: 999999;
 }
 
 .popup-content h2 {
@@ -35,8 +46,6 @@ body {
     margin: 5px 5px;
     width: 80px;
     height: 80px;
-    text-align: center;
-    display: flex;
     line-height: 60px;
 }
 
